--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ARetail | Home Page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="product.css" />
   </head>
   <body>
-    <nav class="navbar navshadow navbar-expand-lg bg-body sticky-top">
+    <nav class="navbar navshadow navbar-expand-lg bg-body sticky-top d-flex">
       <div
         class="boxshadow container-fluid px-lg-3 mx-lg-1 mx-md-4 mx-xl-5 ms-xl-3 pt-1 pb-1"
       >
@@ -27,10 +27,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand me-sm-3 mx-lg-5" href="#"
+        <a class="navbar-brand me-sm-3 mx-lg-5" href="index.html"
           ><img src="./images/ar-logo.png" alt=""
         /></a>
-        <div class="imgcart d-lg-none d-sm-block d-xs-block"></div>
+
         <div
           class="offcanvas offcanvas-start rewidth"
           tabindex="-1"
@@ -46,29 +46,25 @@
             ></button>
             <ul class="navbar-nav justify-content-start flex-grow-1 pe-5 px-5">
               <li class="nav-item px-3">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item px-3">
-                <a class="nav-link" href="product.html">Products</a>
+                <a class="nav-link" href="./product.html">Products</a>
               </li>
               <li class="nav-item px-3">
                 <a class="nav-link" href="#">Pricing</a>
               </li>
-              <!-- <li class="nav-item px-3">
-                <a class="nav-link" href="#">Login</a>
-              </li>
-              <li class="nav-item px-3">
-                <a class="nav-link" href="#"></a>
-              </li> -->
             </ul>
-            <div class="imgcart d-sm-block d-xs-block d-flex">
-              <a class="fs-6 px-3" href="#">Login</a>
-
-              <button class="btn orange-bg px-md-3 py-sm-2 btn-lg mb-2">
-                <a>Sign Up</a>
-              </button>
-            </div>
           </div>
+        </div>
+        <div class="flex-row">
+          <a class="fs-6 px-3 login" href="#">Login</a>
+
+          <button class="btn orange-bg px-md-3 py-sm-2 btn-lg mb-2">
+            <a>Sign Up</a>
+          </button>
         </div>
       </div>
     </nav>
@@ -76,13 +72,13 @@
     <main>
       <!-- HEADER -->
       <section
-        class="card header d-flex-column align-items-center justify-content-center mx-lg-5 border-0 my-lg-2 mt-lg-4 pt-lg-4 text-center"
+        class="card header d-flex-column align-items-center justify-content-center mx-lg-5 mx-sm-2 border-0 my-lg-2 mt-lg-4 pt-lg-4 text-center"
       >
-        <h1 class="card-title text-center px-lg-4 ps-lg-5 pe-lg-5 mx-lg-5">
+        <h1 class="width-title text-center px-lg-4 ps-lg-5 pe-lg-5 mx-lg-5">
           Experience shopping like never before with our augmented reality (AR)
           technology
         </h1>
-        <p class="card-text py-lg-4 px-lg-5 ps-lg-5 pe-lg-5 mx-lg-5">
+        <p class="width-text py-lg-4 px-lg-5 ps-lg-5 pe-lg-5 mx-lg-5">
           See every product in 3D and know exactly how it will look and feel in
           your home. Shop with confidence and convenience, all thanks to our AR
           technology. Explore our collection today and see the difference for
@@ -147,27 +143,30 @@
       </section>
       <!-- REVIEW -->
       <section
-        class="header d-flex-column align-items-center justify-content-center sisyphus border-0 my-lg-2 mt-lg-4 pt-lg-4 text-center"
+        class="header d-flex-column align-items-center justify-content-center sisyphus border-0 my-lg-2 mt-lg-4 py-lg-4 text-center"
       >
         <div
           class="py-lg-3 d-flex-column align-items-center justify-content-center"
         >
-          <img class="" src="./images/Company-logo.png" alt="" />
+          <img class="pt-lg-2" src="./images/Company-logo.png" alt="" />
         </div>
-        <p class="sisyphus-text px-lg-5 mx-lg-5 ps-lg-5 pe-lg-5 text-center">
-          If you're looking for an immersive shopping experience, look no
-          further than ARetail with AR capabilities! With just a few clicks, you
-          can view products in stunning detail using augmented reality
-          technology, allowing you to see exactly how they'll look in your space
-          before you make a purchase. The interface is easy to navigate, and the
-          AR functionality is seamless and intuitive. Whether you're in the
-          market for home decor, furniture, or even clothing, this website is a
-          game changer for online shopping. Give it a try and see for yourself!
-        </p>
+        <div class="mx-lg-5 px-lg-5">
+          <p class="sisyphus-text px-lg-5 mx-lg-5 py-lg-3 text-center">
+            If you're looking for an immersive shopping experience, look no
+            further than ARetail with AR capabilities! With just a few clicks,
+            you can view products in stunning detail using augmented reality
+            technology, allowing you to see exactly how they'll look in your
+            space before you make a purchase. The interface is easy to navigate,
+            and the AR functionality is seamless and intuitive. Whether you're
+            in the market for home decor, furniture, or even clothing, this
+            website is a game changer for online shopping. Give it a try and see
+            for yourself!
+          </p>
+        </div>
         <div>
           <img src="./images/Avatar.png" alt="" />
         </div>
-        <p class="text-small py-2">Product Manager</p>
+        <p class="text-small pt-2">Product Manager</p>
         <p class="text-muted-dollar">I4G</p>
       </section>
 
@@ -257,7 +256,153 @@
           </div>
         </div>
       </div>
+      <!-- FAQ -->
+      <section
+        class="d-flex-column align-items-center justify-content-center sisyphus border-0 my-lg-2 mt-lg mx-lg-5 py-lg-5 text-center"
+      >
+        <div>
+          <img src="./images/Avatar-group.png" alt="" />
+        </div>
+        <div class="py-3 pt-lg-4">
+          <h5 class="text-center p">Got Some Questions?</h5>
+          <p class="text-center text-muted">
+            Can't find the answer you're looking for? Please chat to our
+            friendly team
+          </p>
+        </div>
+        <button class="btn orange-bg px-md-4 py-sm-3 btn-lg mb-2" type="submit">
+          Get in touch
+        </button>
+      </section>
     </main>
+    <!-- FOOTER -->
+    <section class="container">
+      <footer>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5">
+          <div class="col mb-2">
+            <h6>Product</h6>
+            <ul class="nav flex-column">
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary"
+                  >Features</a
+                >
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col mb-2">
+            <h6>Company</h6>
+            <ul class="nav flex-column">
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary"
+                  >Features</a
+                >
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="col mb-2">
+            <h6>Resources</h6>
+            <ul class="nav flex-column">
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary"
+                  >Features</a
+                >
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col mb-2">
+            <h6>Use Case</h6>
+            <ul class="nav flex-column">
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary"
+                  >Features</a
+                >
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col mb-2">
+            <h6>Social</h6>
+            <ul class="nav flex-column">
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary"
+                  >Features</a
+                >
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+              </li>
+              <li class="nav-items mb-2">
+                <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div
+          class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top"
+        >
+          <a class="nav col-md-4 justify-content-start d-flex" href="#"
+            ><img src="./images/ar-logo.png" alt=""
+          /></a>
+          <p>
+            © 2023 I4G x swiftXR Challenge, Team Hybrid. All rights reserved.
+          </p>
+        </div>
+      </footer>
+    </section>
   </body>
 </html>
-F9FAFB
