--- a/all-products.html
+++ b/all-products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ARetail | Home Page</title>
+    <title>All Products</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -74,22 +74,7 @@
       <section
         class="card header d-flex-column align-items-center justify-content-center mx-lg-5 mx-sm-2 border-0 my-lg-2 mt-lg-4 pt-lg-4 text-center"
       >
-        <h1 class="width-title text-center px-lg-4 ps-lg-5 pe-lg-5 mx-lg-5">
-          Experience shopping like never before with our augmented reality (AR)
-          technology
-        </h1>
-        <p class="width-text py-lg-4 px-lg-5 ps-lg-5 pe-lg-5 mx-lg-5">
-          See every product in 3D and know exactly how it will look and feel in
-          your home. Shop with confidence and convenience, all thanks to our AR
-          technology. Explore our collection today and see the difference for
-          yourself
-        </p>
-        <button class="btn orange-bg px-md-4 py-sm-3 btn-lg mb-2" type="submit">
-          Shop now
-        </button>
-        <div class="header-wrap pt-lg-5">
-          <img class="header-img" src="./images/Container.png" alt="" />
-        </div>
+        <h1 class="width-title">Products</h1>
       </section>
 
       <!-- USE CASES -->
@@ -140,139 +125,6 @@
             <p class="card-text">Targeted efforts to reach desired audience.</p>
           </div>
         </div>
-      </section>
-      <!-- REVIEW -->
-      <section
-        class="header d-flex-column align-items-center justify-content-center sisyphus border-0 my-lg-2 mt-lg-4 py-lg-4 text-center"
-      >
-        <div
-          class="py-lg-3 d-flex-column align-items-center justify-content-center"
-        >
-          <img class="pt-lg-2" src="./images/Company-logo.png" alt="" />
-        </div>
-        <div class="mx-lg-5 px-lg-5">
-          <p class="sisyphus-text px-lg-5 mx-lg-5 py-lg-3 text-center">
-            If you're looking for an immersive shopping experience, look no
-            further than ARetail with AR capabilities! With just a few clicks,
-            you can view products in stunning detail using augmented reality
-            technology, allowing you to see exactly how they'll look in your
-            space before you make a purchase. The interface is easy to navigate,
-            and the AR functionality is seamless and intuitive. Whether you're
-            in the market for home decor, furniture, or even clothing, this
-            website is a game changer for online shopping. Give it a try and see
-            for yourself!
-          </p>
-        </div>
-        <div>
-          <img src="./images/Avatar.png" alt="" />
-        </div>
-        <p class="text-small pt-2">Product Manager</p>
-        <p class="text-muted-dollar">I4G</p>
-      </section>
-
-      <!-- BOOST -->
-      <section
-        class="card header d-flex-column align-items-center justify-content-center mx-lg-5 border-0 my-lg-2 mt-lg-4 pt-lg-4 text-center"
-      >
-        <h1
-          class="width-title text-center px-lg-5 ps-lg-5 pe-lg-5 mx-lg-5 text-bolder"
-        >
-          Boost Sales By Showcasing Product in 3D
-        </h1>
-        <p class="width-text py-lg-4 px-lg-5 ps-lg-5 pe-lg-5 mx-lg-5">
-          Can enhance customers'appreciation and engagement with our product
-          ultimately leading to increased sales and customer satisfaction.
-        </p>
-        <div class="header-wrap pt-lg-5">
-          <img class="header-img" src="./images/Content.png" alt="" />
-          <hr />
-        </div>
-      </section>
-      <!-- ENHANCE -->
-      <div
-        class="card border-0 col-md-6 enhance ps-lg-5 ms-lg-5 py-lg-5 pt-lg-3 mt-lg-4"
-      >
-        <h3 class="card-title">
-          Enhancing E-commerce Shopping Experience with 3D and AR Product
-          Software
-        </h3>
-        <p class="card-text py-2">
-          See every product in 3D and know exactly how it will look and feel in
-          your home. Shop with confidence and convenience, all thanks to our AR
-          technology. Explore our collection today and see the difference for
-          yourself!
-        </p>
-      </div>
-      <div class="card main my-lg-3 border-0 d-flex justify-content-lg-center">
-        <div
-          class="row g-0 my-lg-3 mx-0 d-flex justify-content-lg-between mx-md-5 my-md-3 text-center"
-        >
-          <div
-            class="row col-md-4 d-flex justify-content-center mx-md-4 flex-grow-1 g-1 pt-lg-5 mt-lg-5"
-          >
-            <div class="card-body col-md-6">
-              <h1
-                class="card-title fs-sm-5 fw-bold fs-md-6 usecase text-center"
-              >
-                4,000+
-              </h1>
-
-              <h6 class="card-text mt-4 mt-md-2 fs-md-6">Global Customers</h6>
-              <p class="small">
-                We've helped over 4,000 amazing global companies
-              </p>
-            </div>
-            <div class="card-body col-md-6">
-              <h1 class="card-title fs-sm-5 fw-bold fs-md-6 usecase">600%</h1>
-
-              <h6 class="card-text mt-4 mt-md-2 fs-md-6">
-                Return on Investment
-              </h6>
-              <p class="small">
-                Our customers have reported an average of ~600% ROI.
-              </p>
-            </div>
-            <div class="card-body col-md-6">
-              <h1 class="card-title fs-sm-5 fw-bold fs-md-6 usecase">10K</h1>
-
-              <h6 class="card-text mt-4 mt-md-2 fs-md-6">Global Clicks</h6>
-              <p class="small">Our site has been Clicked over 10k times.</p>
-            </div>
-            <div class="card-body col-md-6">
-              <h1 class="card-title fs-sm-5 fw-bold fs-md-6 usecase">200+</h1>
-
-              <h6 class="card-text mt-4 mt-md-2 fs-md-6">5-star Reviews</h6>
-              <p class="small">
-                We’re proud of our 5-star rating with over 200 reviews.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6 me-3 mt-sm-0 my-md-3 mx-md-4 mx-lg-0">
-            <img
-              src="../images/side-img.png"
-              class="img-fluid straight"
-              alt="..."
-            />
-          </div>
-        </div>
-      </div>
-      <!-- FAQ -->
-      <section
-        class="d-flex-column align-items-center justify-content-center sisyphus border-0 my-lg-2 mt-lg mx-lg-5 py-lg-5 text-center"
-      >
-        <div>
-          <img src="./images/Avatar-group.png" alt="" />
-        </div>
-        <div class="py-3 pt-lg-4">
-          <h5 class="text-center p">Got Some Questions?</h5>
-          <p class="text-center text-muted">
-            Can't find the answer you're looking for? Please chat to our
-            friendly team
-          </p>
-        </div>
-        <button class="btn orange-bg px-md-4 py-sm-3 btn-lg mb-2" type="submit">
-          Get in touch
-        </button>
       </section>
     </main>
     <!-- FOOTER -->
