--- a/product.html
+++ b/product.html
@@ -75,40 +75,17 @@
     <main>
       <!-- HEADER -->
       <section
-        class="card header d-flex-column align-items-center justify-content-center mx-lg-5 border-0 my-lg-2 mt-lg-4 pt-lg-4 text-center"
+        class="header-product col d-flex align-items-center justify-content-start border-0"
       >
-        <h1 class="card-title text-center px-lg-4 ps-lg-5 pe-lg-5 mx-lg-5">
+        <h1 class="col-md-6 ps-lg-5 px-lg-5 text-left text-white">
           Experience shopping like never before with our augmented reality (AR)
           technology
         </h1>
-        <p class="card-text py-lg-4 px-lg-5 ps-lg-5 pe-lg-5 mx-lg-5">
-          See every product in 3D and know exactly how it will look and feel in
-          your home. Shop with confidence and convenience, all thanks to our AR
-          technology. Explore our collection today and see the difference for
-          yourself
-        </p>
-        <button class="btn orange-bg px-md-4 py-sm-3 btn-lg mb-2" type="submit">
-          Shop now
-        </button>
-        <div class="header-wrap pt-lg-5">
-          <img class="header-img" src="./images/Container.png" alt="" />
-        </div>
       </section>
 
       <!-- ENHANCE -->
-      <div
-        class="card border-0 col-md-6 enhance ps-lg-5 ms-lg-5 py-lg-5 pt-lg-3 mt-lg-4"
-      >
-        <h3 class="card-title">
-          Enhancing E-commerce Shopping Experience with 3D and AR Product
-          Software
-        </h3>
-        <p class="card-text py-2">
-          See every product in 3D and know exactly how it will look and feel in
-          your home. Shop with confidence and convenience, all thanks to our AR
-          technology. Explore our collection today and see the difference for
-          yourself!
-        </p>
+      <div class="text-center ps-lg-5 ms-lg-5 py-lg-5 pt-lg-4 mt-lg-4">
+        <h2 class="card-title">Popular Products</h2>
       </div>
       <div class="card main my-lg-3 border-0 d-flex justify-content-lg-center">
         <div
@@ -330,5 +307,15 @@
         </div>
       </footer>
     </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
