--- a/all-products.html
+++ b/all-products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Products</title>
+    <title>Explore Products</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,12 +46,15 @@
             ></button>
             <ul class="navbar-nav justify-content-start flex-grow-1 pe-5 px-5">
               <li class="nav-item px-3">
-                <a class="nav-link active" aria-current="page" href="index.html"
-                  >Home</a
-                >
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item px-3">
-                <a class="nav-link" href="./product.html">Products</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="./product.html"
+                  >Products</a
+                >
               </li>
               <li class="nav-item px-3">
                 <a class="nav-link" href="#">Pricing</a>
@@ -78,51 +81,277 @@
       </section>
 
       <!-- USE CASES -->
-      <section
-        class="card header mx-lg-5 border-0 my-lg-5 mt-lg-5 pt-lg-5 text-center"
-      >
-        <h1 class="usecase">Use Cases</h1>
-        <div class="row border-0 mx-auto">
-          <div class="card col-sm-4 border-0">
+      <section class="mx-auto my-4 py-lg-5">
+        <div
+          class="row row-cols-1 justify-content-center row-cols-sm-2 row-cols-md-5 border-0 mx-auto g-4"
+        >
+          <div class="card col cyan border-0 mx-2">
             <div class="pt-lg-5">
-              <img class="py-2" src="./images/icon1.png" alt="" />
+              <img class="py-2" src="./images/Image-Container.png" alt="" />
             </div>
-            <h6 class="card-title text-center">
-              Personalized Shopping Experience
-            </h6>
-            <p class="card-text">
-              Tailored shopping experience for individual customers.
-            </p>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="card border-0 col-sm-4">
+          <div class="card border-0 col blue mx-2">
             <div class="pt-lg-5">
-              <img class="py-2" src="./images/icon2.png" alt="" />
+              <img class="py-2" src="./images/Image-Container (1).png" alt="" />
             </div>
-            <h6 class="card-title text-center">Product Visualization</h6>
-            <p class="card-text">
-              Realistic and detailed view of a product before purchase.
-            </p>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/cabinet.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="card border-0 col-sm-4">
+          <div class="card border-0 col-sm purple mx-2">
             <div class="pt-lg-5">
-              <img class="text-center py-2" src="./images/icon3.png" alt="" />
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
             </div>
-            <h6 class="card-title text-center">Marketing and Advertising</h6>
-            <p class="card-text">Targeted efforts to reach desired audience.</p>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/suitcase.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="card border-0 col-sm-6 pt-lg-4">
+          <div class="card border-0 col pink mx-2">
             <div class="pt-lg-5">
-              <img class="text-center py-2" src="./images/icon4.png" alt="" />
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
             </div>
-            <h6 class="card-title text-center">Marketing and Advertising</h6>
-            <p class="card-text">Targeted efforts to reach desired audience.</p>
+            <div class="d-flex justify-content-between">
+              <div class="py-4">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="card border-0 col-sm-6 pt-lg-4">
+          <div class="card border-0 col cyan mx-2">
             <div class="pt-lg-5">
-              <img class="text-center py-2" src="./images/icon5.png" alt="" />
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
             </div>
-            <h6 class="card-title text-center">Marketing and Advertising</h6>
-            <p class="card-text">Targeted efforts to reach desired audience.</p>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 col blue mx-2">
+            <div class="pt-lg-5">
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 col purple mx-2">
+            <div class="pt-lg-5">
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 col pink mx-2">
+            <div class="pt-lg-5">
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 col cyan mx-2">
+            <div class="pt-lg-5">
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 col blue mx-2">
+            <div class="pt-lg-5">
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 col purple mx-2">
+            <div class="pt-lg-5">
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 col pink mx-2">
+            <div class="pt-lg-5">
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -130,7 +359,9 @@
     <!-- FOOTER -->
     <section class="container">
       <footer>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5">
+        <div
+          class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top"
+        >
           <div class="col mb-2">
             <h6>Product</h6>
             <ul class="nav flex-column">
