--- a/product.html
+++ b/product.html
@@ -87,59 +87,110 @@
       <div class="text-center ps-lg-5 ms-lg-5 py-lg-5 pt-lg-4 mt-lg-4">
         <h2 class="card-title">Popular Products</h2>
       </div>
-      <div class="card main my-lg-3 border-0 d-flex justify-content-lg-center">
+      <section class="mx-auto my-4">
         <div
-          class="row g-0 my-lg-3 mx-0 d-flex justify-content-lg-between mx-md-5 my-md-3 text-center"
+          class="row row-cols-1 justify-content-center row-cols-sm-2 row-cols-md-5 border-0 mx-auto g-4"
         >
-          <div
-            class="row col-md-4 d-flex justify-content-center mx-md-4 flex-grow-1 g-1 pt-lg-5 mt-lg-5"
-          >
-            <div class="card-body col-md-6">
-              <h1
-                class="card-title fs-sm-5 fw-bold fs-md-6 usecase text-center"
-              >
-                4,000+
-              </h1>
-
-              <h6 class="card-text mt-4 mt-md-2 fs-md-6">Global Customers</h6>
-              <p class="small">
-                We've helped over 4,000 amazing global companies
-              </p>
+          <div class="card border-0 col cyan mx-2">
+            <div class="pt-lg-5">
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
             </div>
-            <div class="card-body col-md-6">
-              <h1 class="card-title fs-sm-5 fw-bold fs-md-6 usecase">600%</h1>
-
-              <h6 class="card-text mt-4 mt-md-2 fs-md-6">
-                Return on Investment
-              </h6>
-              <p class="small">
-                Our customers have reported an average of ~600% ROI.
-              </p>
-            </div>
-            <div class="card-body col-md-6">
-              <h1 class="card-title fs-sm-5 fw-bold fs-md-6 usecase">10K</h1>
-
-              <h6 class="card-text mt-4 mt-md-2 fs-md-6">Global Clicks</h6>
-              <p class="small">Our site has been Clicked over 10k times.</p>
-            </div>
-            <div class="card-body col-md-6">
-              <h1 class="card-title fs-sm-5 fw-bold fs-md-6 usecase">200+</h1>
-
-              <h6 class="card-text mt-4 mt-md-2 fs-md-6">5-star Reviews</h6>
-              <p class="small">
-                We’re proud of our 5-star rating with over 200 reviews.
-              </p>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
             </div>
           </div>
-          <div class="col-md-6 me-3 mt-sm-0 my-md-3 mx-md-4 mx-lg-0">
-            <img
-              src="../images/side-img.png"
-              class="img-fluid straight"
-              alt="..."
-            />
+          <div class="card border-0 col blue mx-2">
+            <div class="pt-lg-5">
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 col purple mx-2">
+            <div class="pt-lg-5">
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 col pink mx-2">
+            <div class="pt-lg-5">
+              <img
+                class="text-center py-2"
+                src="./images/Image-Container (2).png"
+                alt=""
+              />
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="py-3">
+                <h6 class="card-title">Gaming Chair</h6>
+                <p class="card-text">Furniture</p>
+                <p class="card-text">N145</p>
+              </div>
+              <div class="align-self-end py-2">
+                <button class="btn orange-bg px-md-2 py-sm-2 btn-lg mb-2">
+                  <a class="nav-link" href="./products/chair.html"
+                    >view product</a
+                  >
+                </button>
+              </div>
+            </div>
           </div>
         </div>
+      </section>
+      <div class="d-flex justify-content-center align-items-center py-2">
+        <button class="btn orange-bg px-md-3 py-sm-3 btn-lg mb-2">
+          <a class="nav-link" href="./all-products.html">Explore products</a>
+        </button>
       </div>
+
       <!-- BOOST -->
       <section
         class="card header d-flex-column align-items-center justify-content-center mx-lg-5 border-0 my-lg-2 mt-lg-4 pt-lg-4 text-center"
